完成DataPropertySection和DescriptionSection的使页面变脏功能